--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		font-family:'Helvetica Neue', sans-serif;
 	}
 	nav	{
-		background-color:#5A6CCC;
+		background-color:#5DDEA6;
 		position:fixed;
 		width:100%;
 		display:flex;
@@ -26,7 +26,7 @@
 	}
 	.title {
 		height:50vh;
-		color:#5A6CCC;
+		color:#5DDEA6;
 		background-color:white;
 /*		background-image:url('https://i.pinimg.com/originals/7f/43/1c/7f431c9e6991b1a83d79e359dc09c99d.gif');*/
 		background-repeat: no-repeat;
@@ -68,7 +68,7 @@
 	}
 	.leftside{
 		background-color:white;
-		color:#5A6CCC;
+		color:#5DDEA6;
 		width: 30%;
     	padding: 5% 10% 5% 5%;
 	}
